[FIX] Account groups

--- a/l10n_nl_rgs/views/account_group_views.xml
+++ b/l10n_nl_rgs/views/account_group_views.xml
@@ -10,6 +10,7 @@
                 <xpath expr="//field[@name='company_id']" position="after">
                     <field name="referentiecode"/>
                     <field name="code"/>
+                    <field name="parent_id"/>
                 </xpath>
             </field>
         </record>
