--- a/l10n_nl_rgs/views/res_config_settings_views.xml
+++ b/l10n_nl_rgs/views/res_config_settings_views.xml
@@ -14,6 +14,10 @@
                         <field name="l10n_nl_rgs_type" attrs="{'required': [('is_l10n_nl_rgs', '=', True)]}"/>
                         <field name="is_l10n_nl_rgs" invisible="1"/>
                     </div>
+                    <div class="row mt16" attrs="{'invisible': [('is_l10n_nl_rgs', '!=', True)]}">
+                        <label for="l10n_nl_rgs_setup_allowed_journals" string="Setup allowed journals" class="col-2 o_light_label" />
+                        <field name="l10n_nl_rgs_setup_allowed_journals" class="oe_inline" />
+                    </div>
                 </xpath>
             </field>
         </record>
