--- a/l10n_nl_rgs/views/res_config_settings_views.xml
+++ b/l10n_nl_rgs/views/res_config_settings_views.xml
@@ -10,6 +10,10 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='chart_template_id']/.." position="after">
                     <div class="row mt16" attrs="{'invisible': [('is_l10n_nl_rgs', '!=', True)]}">
+                        <label for="l10n_nl_company_type" string="Company Type" class="col-2 o_light_label"/>
+                        <field name="l10n_nl_company_type" attrs="{'required': [('is_l10n_nl_rgs', '=', True)]}"/>
+                    </div>
+                    <div class="row mt16" attrs="{'invisible': [('is_l10n_nl_rgs', '!=', True)]}">
                         <label for="l10n_nl_rgs_type" string="RGS Type" class="col-2 o_light_label"/>
                         <field name="l10n_nl_rgs_type" attrs="{'required': [('is_l10n_nl_rgs', '=', True)]}"/>
                         <field name="is_l10n_nl_rgs" invisible="1"/>
