base_onboarding: Live preview themes

--- a/base_onboarding/wizards/onboarding_wizard_view.xml
+++ b/base_onboarding/wizards/onboarding_wizard_view.xml
@@ -99,7 +99,13 @@
                                         <div t-else="" class="o_button_area">
                                             <button type="object" name="button_choose_theme" class="btn btn-primary">Use this theme</button>
                                             <hr t-if="record.url.value"/>
-                                            <button role="button" type="edit" t-if="record.url.value" class="btn btn-secondary">Live Preview</button>
+                                            <a role="button"
+                                               t-if="record.url.value"
+                                               t-att-href="record.url.value" target="_blank"
+                                               class="btn btn-secondary"
+                                            >
+                                                Live Preview
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="o_theme_preview_bottom clearfix">
