[FIX] l10n_nl_rgs_usability: fields visibility on customer info

--- a/l10n_nl_rgs_usability/views/account_move_view.xml
+++ b/l10n_nl_rgs_usability/views/account_move_view.xml
@@ -24,8 +24,15 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account_payment_partner.view_move_form" />
         <field name="arch" type="xml">
+            <field name="payment_mode_id" position="before">
+                <field name="mandate_visible" invisible="1" />
+            </field>
             <field name="payment_mode_id" position="attributes">
-                <attribute name="groups">account_banking_pain_base.group_pain_multiple_identifier</attribute>
+                <attribute name="attrs" operation="update">
+                    {
+                        'invisible': [('mandate_visible', '=', False)]
+                    }
+                </attribute>
             </field>
         </field>
     </record>
