--- a/l10n_nl_rgs_usability/views/account_journal_dashboard.xml
+++ b/l10n_nl_rgs_usability/views/account_journal_dashboard.xml
@@ -8,6 +8,9 @@
             <xpath expr="//t[@id='account.JournalBodySalePurchase']//button[@name='action_create_vendor_bill']" position="replace">
                 <widget name="account_file_uploader" btnClass="btn btn-primary oe_kanban_action_button"/>
             </xpath>
+            <xpath expr="//kanban" position="attributes">
+                <attribute name="banner_route"></attribute>
+            </xpath>
         </field>
     </record>
 
