--- a/l10n_nl_rgs_usability/views/account_move_view.xml
+++ b/l10n_nl_rgs_usability/views/account_move_view.xml
@@ -36,4 +36,15 @@
             </field>
         </field>
     </record>
+
+    <record id="view_out_invoice_tree" model="ir.ui.view">
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_out_invoice_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//tree" position="attributes">
+                <attribute name="banner_route"></attribute>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
