--- a/l10n_nl_rgs_usability/views/account_move_view.xml
+++ b/l10n_nl_rgs_usability/views/account_move_view.xml
@@ -47,4 +47,32 @@
         </field>
     </record>
 
+    <record id="view_move_form" model="ir.ui.view">
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='account_id']" position="attributes">
+                <attribute name="domain">[('deprecated', '=', False), ('account_type', 'not in', ('asset_receivable',
+                    'liability_payable')), ('company_id', '=', parent.company_id), ('is_off_balance', '=', False),
+                    ('allowed_journal_ids','in',[parent.journal_id])]
+                </attribute>
+            </xpath>
+            <xpath expr="//field[@name='invoice_line_ids']/form//field[@name='account_id']" position="attributes">
+                <attribute name="domain">[('company_id', '=', parent.company_id),
+                    ('allowed_journal_ids','in',[parent.journal_id])]
+                </attribute>
+            </xpath>
+            <xpath expr="//field[@name='line_ids']/tree/field[@name='account_id']" position="attributes">
+                <attribute name="domain">[('deprecated', '=', False), ('company_id', '=', parent.company_id),
+                    ('allowed_journal_ids','in',[parent.journal_id])]
+                </attribute>
+            </xpath>
+            <xpath expr="//field[@name='line_ids']/form//field[@name='account_id']" position="attributes">
+                <attribute name="domain">[('company_id', '=', parent.company_id),('deprecated', '=', False),
+                    ('allowed_journal_ids','in',[parent.journal_id])]
+                </attribute>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
