[FIX] Pre-commit - XML - removed deprecated tree strings

--- a/consolidation_account/views/consolidation_account_views.xml
+++ b/consolidation_account/views/consolidation_account_views.xml
@@ -5,7 +5,7 @@
         <field name="name">consolidation.account.tree</field>
         <field name="model">consolidation.account</field>
         <field name="arch" type="xml">
-            <tree string="Consolidation Accounts">
+            <tree>
                 <field name="chart_id"/>
                 <field name="name"/>
                 <field name="code"/>
