--- a/consolidation_account/views/consolidation_chart_views.xml
+++ b/consolidation_account/views/consolidation_chart_views.xml
@@ -5,7 +5,7 @@
         <field name="name">consolidation.chart.tree</field>
         <field name="model">consolidation.chart</field>
         <field name="arch" type="xml">
-            <tree string="Consolidation Charts">
+            <tree>
                 <field name="name"/>
                 <field name="mandatory"/>
             </tree>
