--- a/membership_accessibility/views/views.xml
+++ b/membership_accessibility/views/views.xml
@@ -41,7 +41,7 @@
                         </group>
                     </group>
                     <field name="member_lines" nolabel="1" colspan="4" readonly="1">
-                        <tree string="Memberships">
+                        <tree>
                             <field name="date"/>
                             <field name="membership_id" options="{'no_open': True, 'no_create': True}"/>
                             <field name="category_id" optional="hide" options="{'no_open': True, 'no_create': True}"/>
@@ -60,14 +60,14 @@
                         </tree>
                     </field>
                     <field name="committee_membership_ids" nolabel="1" colspan="4" readonly="1">
-                        <tree string="Memberships" editable="top">
+                        <tree editable="top">
                             <field name="committee_id"/>
                         </tree>
                     </field>
                 </page>
                 <page name="subscriptions" string="Subscriptions" attrs="{'invisible': [('mollie_subscription_ids', '=', False)]}">
                     <field name="mollie_subscription_ids" widget="one2many">
-                        <tree string="subscriptions" create="0" delete="0" edit="0">
+                        <tree create="0" delete="0" edit="0">
                             <field name="name"/>
                             <field name="description"/>
                             <field name="amount"/>
