--- a/membership_accessibility/views/views.xml
+++ b/membership_accessibility/views/views.xml
@@ -65,15 +65,16 @@
                         </tree>
                     </field>
                 </page>
-                <page name="subscriptions" string="Subscriptions" attrs="{'invisible': [('mollie_subscription_ids', '=', False)]}">
-                    <field name="mollie_subscription_ids" widget="one2many">
+                <page name="subscriptions" string="Subscriptions" attrs="{'invisible': [('subscription_ids', '=', False)]}">
+                    <field name="subscription_ids" widget="one2many">
                         <tree create="0" delete="0" edit="0">
-                            <field name="name"/>
-                            <field name="description"/>
-                            <field name="amount"/>
-                            <field name="startDate"/>
-                            <field name="nextPaymentDate"/>
-                            <field name="status"/>
+                            <field name="name" optional="show" />
+                            <field name="recurring_next_date" optional="show" />
+                            <field name="code" optional="show" />
+                            <field name="recurring_total" sum="Total subtotal" optional="show" />
+                            <field name="amount_tax" sum="Total Tax" optional="show" />
+                            <field name="amount_total" sum="Total" optional="show" />
+                            <field name="stage_str" optional="show" />
                         </tree>
                     </field>
                 </page>
